--- a/app/src/main/res/layout/dialog_resend_verification.xml
+++ b/app/src/main/res/layout/dialog_resend_verification.xml
@@ -5,7 +5,7 @@
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp"
     android:orientation="vertical"
-    android:background="#6576D8"
+    android:background="#A9A9A9"
     android:padding="15dp">
 
     <TextView
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:hint="@string/email"
+        android:textColor="#fff"
         android:layout_marginBottom="15dp"
         android:padding="10dp"
         android:background="@drawable/custom_btn2"
@@ -37,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:hint="@string/password"
-        android:textColor="#474343"
+        android:textColor="#fff"
         android:layout_marginBottom="15dp"
         android:background="@drawable/custom_btn2"
         android:padding="10dp"
@@ -56,7 +57,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            android:textColor="#474343"
+            android:textColor="@color/linkBlue"
             android:text="@string/cancel"
             android:textSize="15sp"
             android:layout_marginRight="10dp" />
@@ -69,7 +70,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="10dp"
-            android:textColor="#474343"
+            android:textColor="@color/linkBlue"
             android:text="@string/submit"
             android:textSize="15sp"
             tools:ignore="RelativeOverlap"
