--- a/app/src/main/res/layout/dialogue_password_reset.xml
+++ b/app/src/main/res/layout/dialogue_password_reset.xml
@@ -5,7 +5,7 @@
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp"
     android:orientation="vertical"
-    android:background="#6576D8"
+    android:background="#A9A9A9"
     android:padding="15dp">
 
     <TextView
@@ -26,7 +26,7 @@
         android:hint="@string/email"
         android:layout_marginBottom="15dp"
         android:padding="10dp"
-        android:textColor="#474343"
+        android:textColor="#fff"
         android:background="@drawable/custom_btn2"
         android:inputType="textEmailAddress"
         android:textSize="20sp"
@@ -44,7 +44,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:text="@string/cancel"
-            android:textColor="#474343"
+            android:textColor="@color/linkBlue"
             android:textSize="15sp"
             android:layout_marginRight="10dp" />
 
@@ -57,7 +57,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginBottom="10dp"
             android:text="@string/submit"
-            android:textColor="#474343"
+            android:textColor="@color/linkBlue"
             android:textSize="15sp"
             tools:ignore="RelativeOverlap"
             android:layout_alignParentRight="true"
