--- a/app/src/main/res/layout/activity_driver_tout.xml
+++ b/app/src/main/res/layout/activity_driver_tout.xml
@@ -17,6 +17,7 @@
     <RelativeLayout
         android:id="@+id/relLayout0"
         android:layout_width="match_parent"
+        android:layout_marginTop="15dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/header">
         <!--  This weeks initiatives  -->
@@ -79,15 +80,17 @@
                 android:id="@+id/find_stage"
                 android:layout_height="wrap_content"
                 android:textColor="#474343"
-                android:layout_marginTop="105dp"
-                android:text="Find commuter numbers of entered bus stop here:"
+                android:lineSpacingExtra="8dp"
+                android:layout_marginTop="102dp"
+                android:text="Find commuters number of submitted bus stop here:"
                 android:padding="5dp"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 />
             <ImageView
                 android:id="@+id/text_img"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
+                android:layout_marginTop="15dp"
                 android:layout_below="@+id/find_stage"
                 android:layout_centerVertical="true"
                 android:src="@drawable/bus_stop"
@@ -100,13 +103,14 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="25dp"
                 android:layout_toEndOf="@id/text_img"
-                android:textColor="#fff"
-                android:text="No bus stop name has been searched yet"
+                android:textColor="#474343"
+                android:text="No bus stop name has been submitted yet"
                 android:padding="5dp"
+                android:lineSpacingExtra="8dp"
                 android:layout_below="@+id/find_stage"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@id/text_img" />
         </RelativeLayout>
