--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -28,7 +28,7 @@
                 android:padding="5dp"
                 android:text="@string/title"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <ImageView
@@ -54,10 +54,11 @@
                     android:layout_gravity="start"
                     android:layout_marginBottom="10dp"
                     android:background="#A9A9A9"
-                    android:lineSpacingExtra="@dimen/cardview_default_elevation"
                     android:layout_margin="15dp"
+                    android:id="@+id/main_frag_txt"
                     android:padding="10dp"
-                    android:text="@string/reason"
+                    android:lineSpacingExtra="15dp"
+                android:text="@string/reason"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
             </androidx.cardview.widget.CardView>
